# axis_sdk

./: .gitignore  CMakeLists.txt  README.md
config/: default_config.yaml  imu_gps_lidar.yaml  imu_only.yaml  jetson_optimized.yaml  ml_model.json
docs/: api_reference.md  architecture.md  ml_model_training.md  sensor_integration.md
include/axis/: axis_localizer.h  config_parser.h  diagnostics.h  ekf_state.h  gps_handler.h  imu_handler.h  lidar_odom_handler.h  map_lite_relocalizer.h  ml_weighting.h  mode_manager.h  sensor_interface.h  types.h  vo_handler.h  wheel_odom_handler.h
include/axis/utils/: math_utils.h
src/: axis_localizer.cpp  config_parser.cpp  diagnostics.cpp  ekf_state.cpp  gps_handler.cpp  imu_handler.cpp  lidar_odom_handler.cpp  main.cpp  map_lite_relocalizer.cpp  ml_weighting.cpp  mode_manager.cpp  vo_handler.cpp  wheel_odom_handler.cpp
src/utils/: math_utils.cpp
tests/: CMakeLists.txt  test_dummy.cpp  test_ekf.cpp  test_map_lite.cpp  test_ml_weighting.cpp  test_mode_transitions.cpp  test_node_manager.cpp
